fix: more consistent white space

--- a/src/containers/CaseStudyView/CaseStudyView.module.scss
+++ b/src/containers/CaseStudyView/CaseStudyView.module.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  margin-top: var(--s6);
-  margin: var(--s6) auto 0 auto;
+  margin: var(--s4) auto 0 auto;
   width: 100%;
 
   p,
@@ -59,6 +58,7 @@
 
 .CaseStudyTitle {
   composes: gradient__underline from global;
+  margin-bottom: var(--s10);
 }
 
 .CaseStudySubTitle {
@@ -67,7 +67,7 @@
 
 .CaseStudySectionTitle {
   composes: gradient__underline from global;
-  margin-bottom: var(--s5);
+  margin-bottom: var(--s10);
 }
 
 .CaseStudyProblemTitle,
@@ -164,7 +164,7 @@
   flex-wrap: wrap;
   gap: var(--s3);
   justify-content: center;
-  margin: var(--s4) 0 var(--s8) 0;
+  margin: var(--s8) 0 0 0;
   flex-grow: 1;
   width: 100%;
 }
