--- a/src/containers/HomeView/About/About.module.scss
+++ b/src/containers/HomeView/About/About.module.scss
@@ -35,7 +35,7 @@
 
 .AboutTitle {
   composes: gradient__underline from global;
-  margin-bottom: var(--s5);
+  margin-bottom: var(--s10);
 }
 
 .AboutTitle2 {
