--- a/src/containers/HomeView/Contact/Contact.module.scss
+++ b/src/containers/HomeView/Contact/Contact.module.scss
@@ -41,7 +41,7 @@
 
 .ContactTitle {
   composes: gradient__underline from global;
-  margin-bottom: var(--s5);
+  margin-bottom: var(--s10);
 }
 
 .ContactSubTitle {
